tests/input/semantic_errors/incompatibleTypes2.c
#include <sfsdf.h> // IS AGAIN VALID??
int main(){
    int x = 5;
    char c = 'a';
    x + c;
    return 1;
}
